--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		{{!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> --}}
-		<title>Eat a Burger</title>
-		{{!-- <script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/cats.js"></script> --}}
+		<link rel="stylesheet" href="/css/burger_style.css" type="text/css" />
+		<title>Eat a Burger!</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/js/burger.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
 	</body>
 </html>
+
