--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,21 @@
 
 <div class="container">
     
-      <h1>Enjoy Your Burger</h1>
-      <img src="/images/burgerImg.png" alt="honey" id="img"> 
-  
+<h1>enjoy the burger</h1>
+
+  <img src="/images/burgerImg.png" alt="burger" id="img">
+
+
+<div class='add-burger'>
+  <h2 id='brg-label'>add a burger</h2>
+    <form class="addburger-form">
+      <textarea type="text" id="brg" name="burger_name"></textarea>
+      <button type="submit" id='btn'>submit</button>
+    </form>
+</div>
+      
 <div class='not-devoured'>
-<h2>To be Devoured</h2>
+{{!-- <h2>To be Devoured</h2> --}}
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
@@ -16,26 +26,22 @@
 </div>
 
 <div class='devoured'>
-  <h2>Devoured</h2>
+  {{!-- <h2>Devoured</h2> --}}
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-    <li>
+    
       <p>
         {{this.id}}. {{this.burger_name}}
-      </p>
+      
     </li>
     {{/if}}
   {{/each}}
 </ul>
-  
 </div>
 
-  <h2>Add Burger</h2>
-  <form class="addburger-form">
-    <textarea type="text" id="brg" name="burger_name"></textarea>
-    <button type="submit">Submit</button>
-  </form>
+
+
 </div>
 
 
