fixing devour it button

--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,8 +1,9 @@
 
-	
 		<p>
 			{{this.id}}. {{this.burger_name}}
+			
 		</p>
+		<button class="change-burger" data-id="{{id}}">devour it!</button>
 	
 	
 
